--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -1,13 +1,1 @@
-<html>
-
-<head>
-  <title>Express</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
-</head>
-
-<body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
-</body>
-
-</html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>frontend</title><link href="/css/result.875938e2.css" rel="prefetch"><link href="/js/result.79cad0ce.js" rel="prefetch"><link href="/css/app.02a86f2f.css" rel="preload" as="style"><link href="/css/chunk-vendors.c470e980.css" rel="preload" as="style"><link href="/js/app.24e88291.js" rel="preload" as="script"><link href="/js/chunk-vendors.8b2234f3.js" rel="preload" as="script"><link href="/css/chunk-vendors.c470e980.css" rel="stylesheet"><link href="/css/app.02a86f2f.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but frontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.8b2234f3.js"></script><script src="/js/app.24e88291.js"></script></body></html>
